Fixed issue where changing from Nebula theme to Light or Dark resulted in awkward whitespace at the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -273,7 +273,7 @@ color: black;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  //height: 100%;
   z-index: -2;
   transition: 0.75s ease-in-out;
 }
